// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UsersForm /> renders create user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        disabled={false}
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        disabled={false}
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        disabled={false}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        className="frm-users-email"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        className="frm-users-invitation-status"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        className="frm-users-platform-authentication"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        disabled={false}
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        disabled={false}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        className="users-form-capacity-rule"
        disabled={false}
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        disabled={false}
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        disabled={false}
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        disabled={false}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        className="frm-users-email"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        className="frm-users-invitation-status"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        className="frm-users-platform-authentication"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        disabled={false}
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        disabled={false}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        className="users-form-capacity-rule"
        disabled={false}
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user saving and inherited 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        disabled={true}
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        disabled={true}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        className="frm-users-email"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        className="frm-users-invitation-status"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        className="frm-users-platform-authentication"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        disabled={true}
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={true}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        className="users-form-capacity-rule"
        disabled={true}
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;

exports[`<UsersForm /> renders update user without update permision 1`] = `
<form
  onSubmit={[Function]}
>
  <styled.div>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Platform Details"
      />
      <InputField
        className="frm-users-firstname"
        componentType="input"
        disabled={true}
        inputType="text"
        label="First Name"
        name="firstName"
      />
      <InputField
        className="frm-users-lastname"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Last Name"
        name="lastName"
      />
      <InputField
        className="frm-users-external-id"
        componentType="input"
        disabled={true}
        inputType="text"
        label="External ID"
        name="externalId"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Login Details"
      />
      <InputField
        className="frm-users-email"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Email"
        name="email"
      />
      <InputField
        className="frm-users-invitation-status"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Platform Status"
        name="invitationStatus"
      />
      <SelectField
        className="frm-users-platform-authentication"
        disabled={true}
        label="Platform Authentication"
        name="noPassword"
        options={
          Array [
            Object {
              "label": "Enabled",
              "value": false,
            },
            Object {
              "label": "Disabled",
              "value": true,
            },
          ]
        }
        required={true}
      />
      <SelectField
        className="frm-users-default-sso-provider"
        disabled={true}
        label="Single Sign On Identitiy Provider"
        name="defaultIdentityProvider"
        required={true}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Tenant Details"
      />
      <InputField
        className="frm-users-workstation-id"
        componentType="input"
        disabled={true}
        inputType="text"
        label="Workstation ID"
        name="workStationId"
      />
      <SelectField
        className="frm-users-role-id"
        disabled={true}
        label="Tenant Role"
        name="roleId"
        options={Array []}
        required={false}
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        onActionButtonClick={[Function]}
        text="Extensions"
        userHasUpdatePermission={false}
      />
      <ExtensionListField
        className="users-extensions"
        disabled={false}
        label="Inputs"
        name="extensions"
      />
    </Connect(DetailWrapper)>
    <Connect(DetailWrapper)
      open={true}
    >
      <Styled(DetailHeader)
        text="Capacity"
      />
      <SelectField
        className="users-form-capacity-rule"
        disabled={true}
        label="Capacity Rule"
        name="effectiveCapacityRule"
        required={true}
      />
    </Connect(DetailWrapper)>
  </styled.div>
</form>
`;
